# docs/swagger.json
@@ -585,6 +585,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "创建支付链接请求",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/link.CreatePaymentLinkRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -652,6 +661,38 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/payment.PayOrderRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseAny"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/merchant/payment-links/pay": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "merchant"
+                ],
+                "parameters": [
+                    {
+                        "description": "支付请求",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/link.PayByLinkRequest"
                         }
                     }
                 ],
@@ -1195,6 +1236,46 @@
                 }
             }
         },
+        "link.CreatePaymentLinkRequest": {
+            "type": "object",
+            "required": [
+                "amount",
+                "product_name"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "product_name": {
+                    "type": "string",
+                    "maxLength": 30
+                },
+                "remark": {
+                    "type": "string",
+                    "maxLength": 100
+                }
+            }
+        },
+        "link.PayByLinkRequest": {
+            "type": "object",
+            "required": [
+                "pay_key",
+                "token"
+            ],
+            "properties": {
+                "pay_key": {
+                    "type": "string",
+                    "maxLength": 6
+                },
+                "remark": {
+                    "type": "string",
+                    "maxLength": 100
+                },
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "model.PayLevel": {
             "type": "integer",
             "format": "int32",
@@ -1288,7 +1369,7 @@
                 },
                 "remark": {
                     "type": "string",
-                    "maxLength": 200
+                    "maxLength": 100
                 }
             }
         },
@@ -1304,7 +1385,7 @@
                 },
                 "pay_key": {
                     "type": "string",
-                    "maxLength": 10
+                    "maxLength": 6
                 }
             }
         },
@@ -1409,7 +1490,8 @@
                     "type": "number"
                 },
                 "pay_key": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 6
                 },
                 "recipient_id": {
                     "type": "integer"
@@ -1418,7 +1500,8 @@
                     "type": "string"
                 },
                 "remark": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 100
                 }
             }
         },
@@ -1467,7 +1550,7 @@
             "properties": {
                 "pay_key": {
                     "type": "string",
-                    "maxLength": 10
+                    "maxLength": 6
                 }
             }
         },
