# internal/model/merchant_payment_links.go
@@ -27,13 +27,22 @@ package model
 import (
 	"time"
 
+	"github.com/shopspring/decimal"
 	"gorm.io/gorm"
 )
 
 type MerchantPaymentLink struct {
-	ID               uint64         `json:"id" gorm:"primaryKey;autoIncrement"`
-	MerchantAPIKeyID uint64         `json:"merchant_api_key_id" gorm:"not null;index"`
-	Token            string         `json:"token" gorm:"size:64;uniqueIndex;not null"`
-	CreatedAt        time.Time      `json:"created_at" gorm:"autoCreateTime;index"`
-	DeletedAt        gorm.DeletedAt `json:"deleted_at" gorm:"index"`
+	ID               uint64          `json:"id" gorm:"primaryKey;autoIncrement"`
+	MerchantAPIKeyID uint64          `json:"merchant_api_key_id" gorm:"not null;index"`
+	Token            string          `json:"token" gorm:"size:64;uniqueIndex;not null"`
+	Amount           decimal.Decimal `json:"amount" gorm:"type:numeric(20,2);not null"`
+	ProductName      string          `json:"product_name" gorm:"size:30;not null"`
+	Remark           string          `json:"remark" gorm:"size:100"`
+	CreatedAt        time.Time       `json:"created_at" gorm:"autoCreateTime;index"`
+	DeletedAt        gorm.DeletedAt  `json:"deleted_at" gorm:"index"`
+}
+
+// GetByToken 通过 Token 查询支付链接
+func (m *MerchantPaymentLink) GetByToken(tx *gorm.DB, token string) error {
+	return tx.Where("token = ?", token).First(m).Error
 }
